Update yarn scripts

--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
 	"scripts": {
-		"install:backend": "npm i",
-		"install:frontend": "cd client && npm i",
 		"dev:backend": "nodemon --ignore client/ --exec node_modules/.bin/ts-node -- ./backend/server.ts",
-		"dev:frontend": "webpack --config ./webpack.frontend.config.dev.js --watch",
+		"dev:client": "nodemon --ignore backend/ --exec node_modules/.bin/ts-node -- ./client/client.ts",
 		"start:backend": "node_modules/.bin/ts-node -- ./backend/server.ts",
-		"start:frontend": "webpack --config ./webpack.frontend.config.prod.js"
+		"start:client": "node_modules/.bin/ts-node -- ./client/client.ts"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
