--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"socket.io": "^2.3.0",
-		"socket.io-client": "^2.3.0",
+		"socket.io-client": "2.2.0",
 		"wakeonlan": "^0.1.0",
 		"winston": "^3.2.1"
 	}
